--- a/index.html
+++ b/index.html
@@ -387,6 +387,12 @@
                                     <i class='bx bx-cart-alt new__icon'></i>
                                 </button>
                             </div>
+                            
+                            <div>
+                                Halloween or Hallowe'en (a contraction of "All Hallows' evening"),[5] less commonly known as Allhalloween,[6] All Hallows' Eve,[7] or All Saints' Eve,[8] is a celebration observed in many countries on 31 October, the eve of the Western Christian feast of All Hallows' Day. It begins the observance of Allhallowtide,[9] the time in the liturgical year dedicated to remembering the dead, including saints (hallows), martyrs, and all the departed.[10][11]
+
+One theory holds that many Halloween traditions were influenced by Celtic harvest festivals, particularly the Gaelic festival Samhain, which are believed to have pagan roots.[12][13][14][15] Some go further and suggest that Samhain may have been Christianized as All Hallow's Day, along with its eve, by the early Church.[16] Other academics believe Halloween began solely as a Christian holiday, being the vigil of All Hallow's Day.[17][18][19][20] Celebrated in Ireland and Scotland for centuries, Irish and Scottish immigrants took many Halloween customs to North America in the 19th century,[21][22] and then through American influence Halloween had spread to other countries by the late 20th and early 21st century.[23][24]
+                            </div>
         
                             <div class="new__content swiper-slide">
                                 <div class="new__tag">New</div>
